# Verilator-Coverview-Converter

./: .gitignore  README.md  convert_coverage_to_coverview.py  pyproject.toml
src/verilator_coverage_with_coverview/: __main__.py  args_config.py  command_utils.py  lcov.py  models.py  path_alias.py  pipeline.py  toggle_labels.py
